--- a/src/html/intelligent_real_detail.html
+++ b/src/html/intelligent_real_detail.html
@@ -429,7 +429,7 @@
         <div class="modal-body">
           <form class="form-horizontal">
             <div class="form-group">
-              <label for="" class="col-lg-2">试卷标题：</label>
+              <label for="" class="col-lg-2 xc-nowrap">试卷标题：</label>
               <div class="col-lg-10">
                 <input type="text" placeholder="
                   请输入题干" class="form-control">
