--- a/src/html/intelligent_test_read_03.html
+++ b/src/html/intelligent_test_read_03.html
@@ -290,11 +290,11 @@
                 </div>
                 <form class="form-horizontal">
                   <div class="xc-mb10">
-                    <button class="btn btn-primary">保存</button>
-                    <button class="btn btn-default">清空代码</button>
+                    <a class="btn btn-primary">保存</a>
+                    <a class="btn btn-default">清空代码</a>
                   </div>
                   <div class="form-group">
-                    <label class="col-lg-1 control-label">题目文本：</label>
+                    <label class="col-lg-1 control-label xc-nowrap">题目文本：</label>
                     <div class="col-lg-11">
                       <input type="text" placeholder="选择最恰当的答案，在前面的括号里用A, B或C表示" class="form-control">
                     </div>
@@ -330,7 +330,7 @@
                       </div>
                     </div>
                     <div class="form-group">
-                      <label class="col-lg-1 control-label">答案&解析：</label>
+                      <label class="col-lg-1 control-label xc-nowrap">答案&解析：</label>
                       <div class="col-lg-2">
                         <select name="account" class="form-control m-b">
                           <option value="">请选择答案</option>
@@ -368,7 +368,7 @@
                       </div>
                     </div>
                     <div class="form-group">
-                      <label class="col-lg-1 control-label">答案&解析：</label>
+                      <label class="col-lg-1 control-label xc-nowrap">答案&解析：</label>
                       <div class="col-lg-2">
                         <select name="account" class="form-control m-b">
                           <option value="">请选择答案</option>
@@ -406,7 +406,7 @@
                       </div>
                     </div>
                     <div class="form-group">
-                      <label class="col-lg-1 control-label">答案&解析：</label>
+                      <label class="col-lg-1 control-label xc-nowrap">答案&解析：</label>
                       <div class="col-lg-2">
                         <select name="account" class="form-control m-b">
                           <option value="">请选择答案</option>
@@ -444,7 +444,7 @@
                       </div>
                     </div>
                     <div class="form-group">
-                      <label class="col-lg-1 control-label">答案&解析：</label>
+                      <label class="col-lg-1 control-label xc-nowrap">答案&解析：</label>
                       <div class="col-lg-2">
                         <select name="account" class="form-control m-b">
                           <option value="">请选择答案</option>
