--- a/src/html/synchronize_unit_text.html
+++ b/src/html/synchronize_unit_text.html
@@ -278,7 +278,7 @@
                             <div class="form-group col-xs-12">
                               <label class="col-lg-1 control-label">第一句：</label>
                               <div class="col-lg-11">
-                                <button class="btn btn-default">删除</button>
+                                <a class="btn btn-default">删除</a>
                               </div>
                             </div>
                             <div class="form-group col-xs-12">
@@ -307,7 +307,7 @@
                               </div>
                             </div>
                           </div>
-                          <button class="btn btn-default"> + 增加句子</button>
+                          <a class="btn btn-default"> + 增加句子</a>
                         </div>
                       </form>
                     </li>
@@ -463,7 +463,7 @@
                               <button class="btn btn-default jq-test-mx"> + 增加一行输入框</button>
                             </div>
                           </div>
-                          <button class="btn btn-primary">保存</button>
+                          <a class="btn btn-primary">保存</a>
                         </div>
                       </form>
                     </li>
