--- a/src/html/datastatistics_loss.html
+++ b/src/html/datastatistics_loss.html
@@ -274,7 +274,7 @@
                 <form class="text-right form-lineH">
                   <div class="row">
                     <div class="form-group col-sm-3">
-                      <label class="col-sm-4">学生手机：</label>
+                      <label class="col-sm-4" style="white-space: nowrap;">学生手机：</label>
                       <div class="col-sm-8">
                         <input type="tel" name="" class="form-control">
                       </div>
