--- a/src/html/grammar_unit_choice.html
+++ b/src/html/grammar_unit_choice.html
@@ -691,7 +691,7 @@
               </div>
             </div>
             <div class="form-group">
-              <label class="col-lg-1 control-label">答案解析:</label>
+              <label class="col-lg-1 control-label xc-nowrap">答案解析:</label>
               <div class="col-lg-2">
                 <select name="account" class="form-control m-b">
                   <option>请选择答案</option>
