--- a/src/html/grammar_unit_fillblank.html
+++ b/src/html/grammar_unit_fillblank.html
@@ -449,7 +449,7 @@
               </div>
             </div>
             <div class="form-group">
-              <label class="col-lg-1 control-label">答案&解析:</label>
+              <label class="col-lg-1 control-label xc-nowrap">答案&解析:</label>
               <div class="col-lg-2">
                 <input type="text" placeholder="请输入答案" class="form-control">
               </div>
