--- a/src/html/intelligent_real_blank_02.html
+++ b/src/html/intelligent_real_blank_02.html
@@ -269,8 +269,8 @@
               <div class="panel-heading">
                 <form class="form-horizontal">
                   <div class="xc-mb10">
-                    <button class="btn btn-primary">保存</button>
-                    <button class="btn btn-default">清空本页</button>
+                    <a class="btn btn-primary">保存</a>
+                    <a class="btn btn-default">清空本页</a>
                   </div>
                   <div class="form-group">
                     <label class="col-lg-1 control-label">短文：</label>
