--- a/src/html/intelligent_real_hearing.html
+++ b/src/html/intelligent_real_hearing.html
@@ -261,15 +261,15 @@
           <div class="col-xs-12">
             <div class="panel xc-headring">
               <div class="panel-heading">
-                <button class="btn btn-primary">保存</button>
-                <button class="btn btn-danger jq-clear-form">清空本页</button>
+                <a class="btn btn-primary">保存</a>
+                <a class="btn btn-danger jq-clear-form">清空本页</a>
                 <form class="form-horizontal">
                   <input type="file" class="file" style="display: none">
                   <div>
                     <div class="form-group">
                       <label class="col-lg-1 control-label">第一篇</label>
                       <div class="col-lg-11">
-                        <button class="btn btn-default">清空</button>
+                        <a class="btn btn-default">清空</a>
                       </div>
                     </div>
                     <div class="form-group">
@@ -294,7 +294,7 @@
                             <div class="col-lg-8">
                               <input type="text" placeholder="请输入题干" class="form-control">
                             </div>
-                            <label class="col-lg-1 control-label">正确答案:</label>
+                            <label class="col-lg-1 control-label xc-nowrap">正确答案:</label>
                             <div class="col-lg-2">
                               <select name="account" class="form-control m-b">
                                 <option>请选择正确答案</option>
@@ -330,7 +330,7 @@
                             <div class="col-lg-8">
                               <input type="text" placeholder="请输入题干" class="form-control">
                             </div>
-                            <label class="col-lg-1 control-label">正确答案:</label>
+                            <label class="col-lg-1 control-label xc-nowrap">正确答案:</label>
                             <div class="col-lg-2">
                               <select name="account" class="form-control m-b">
                                 <option>请选择正确答案</option>
@@ -366,7 +366,7 @@
                             <div class="col-lg-8">
                               <input type="text" placeholder="请输入题干" class="form-control">
                             </div>
-                            <label class="col-lg-1 control-label">正确答案:</label>
+                            <label class="col-lg-1 control-label xc-nowrap">正确答案:</label>
                             <div class="col-lg-2">
                               <select name="account" class="form-control m-b">
                                 <option>请选择正确答案</option>
@@ -402,7 +402,7 @@
                             <div class="col-lg-8">
                               <input type="text" placeholder="请输入题干" class="form-control">
                             </div>
-                            <label class="col-lg-1 control-label">正确答案:</label>
+                            <label class="col-lg-1 control-label xc-nowrap">正确答案:</label>
                             <div class="col-lg-2">
                               <select name="account" class="form-control m-b">
                                 <option>请选择正确答案</option>
@@ -438,7 +438,7 @@
                             <div class="col-lg-8">
                               <input type="text" placeholder="请输入题干" class="form-control">
                             </div>
-                            <label class="col-lg-1 control-label">正确答案:</label>
+                            <label class="col-lg-1 control-label xc-nowrap">正确答案:</label>
                             <div class="col-lg-2">
                               <select name="account" class="form-control m-b">
                                 <option>请选择正确答案</option>
@@ -474,7 +474,7 @@
                             <div class="col-lg-8">
                               <input type="text" placeholder="请输入题干" class="form-control">
                             </div>
-                            <label class="col-lg-1 control-label">正确答案:</label>
+                            <label class="col-lg-1 control-label xc-nowrap">正确答案:</label>
                             <div class="col-lg-2">
                               <select name="account" class="form-control m-b">
                                 <option>请选择正确答案</option>
