--- a/src/html/intelligent_real_mistalk.html
+++ b/src/html/intelligent_real_mistalk.html
@@ -269,8 +269,8 @@
               <div class="panel-heading">
                 <form class="form-horizontal">
                   <div class="xc-mb10">
-                    <button class="btn btn-primary">保存</button>
-                    <button class="btn btn-default">清空本页</button>
+                    <a class="btn btn-primary">保存</a>
+                    <a class="btn btn-default">清空本页</a>
                   </div>
                   <div class="xc-mb10">
                     <h4>录入句子</h4>
