--- a/src/html/intelligent_real_read.html
+++ b/src/html/intelligent_real_read.html
@@ -280,8 +280,8 @@
                     <li class="active">
                       <form class="form-horizontal">
                         <div class="xc-mb10">
-                          <button class="btn btn-primary">保存</button>
-                          <button class="btn btn-default">清空本页</button>
+                          <a class="btn btn-primary">保存</a>
+                          <a class="btn btn-default">清空本页</a>
                         </div>
                         <div class="form-group">
                           <label class="col-lg-1 control-label">题目文本：</label>
@@ -513,8 +513,8 @@
                     <li class="">
                       <form class="form-horizontal">
                         <div class="xc-mb10">
-                          <button class="btn btn-primary">保存</button>
-                          <button class="btn btn-default">清空本页</button>
+                          <a class="btn btn-primary">保存</a>
+                          <a class="btn btn-default">清空本页</a>
                         </div>
                         <div class="form-group">
                           <label class="col-lg-1 control-label">题目文本：</label>
@@ -746,8 +746,8 @@
                     <li class="">
                       <form class="form-horizontal">
                         <div class="xc-mb10">
-                          <button class="btn btn-primary">保存</button>
-                          <button class="btn btn-default">清空本页</button>
+                          <a class="btn btn-primary">保存</a>
+                          <a class="btn btn-default">清空本页</a>
                         </div>
                         <div class="form-group">
                           <label class="col-lg-1 control-label">题目文本：</label>
@@ -979,8 +979,8 @@
                     <li class="">
                       <form class="form-horizontal">
                         <div class="xc-mb10">
-                          <button class="btn btn-primary">保存</button>
-                          <button class="btn btn-default">清空本页</button>
+                          <a class="btn btn-primary">保存</a>
+                          <a class="btn btn-default">清空本页</a>
                         </div>
                         <div class="form-group">
                           <label class="col-lg-1 control-label">题目文本：</label>
@@ -1212,8 +1212,8 @@
                     <li class="">
                       <form class="form-horizontal">
                         <div class="xc-mb10">
-                          <button class="btn btn-primary">保存</button>
-                          <button class="btn btn-default">清空本页</button>
+                          <a class="btn btn-primary">保存</a>
+                          <a class="btn btn-default">清空本页</a>
                         </div>
                         <div class="form-group">
                           <label class="col-lg-1 control-label">题目文本：</label>
