--- a/src/html/intelligent_real_read_c02.html
+++ b/src/html/intelligent_real_read_c02.html
@@ -287,8 +287,8 @@
                 </div>
                 <form class="form-horizontal">
                   <div class="xc-mb10">
-                    <button class="btn btn-primary">保存</button>
-                    <button class="btn btn-default">清空本页</button>
+                    <a class="btn btn-primary">保存</a>
+                    <a class="btn btn-default">清空本页</a>
                   </div>
                   <div class="form-group">
                     <label class="col-lg-1 control-label xc-nowrap">题目文本：</label>
