--- a/src/html/intelligent_test_read_02.html
+++ b/src/html/intelligent_test_read_02.html
@@ -290,11 +290,11 @@
                 </div>
                 <form class="form-horizontal">
                   <div class="xc-mb10">
-                    <button class="btn btn-primary">保存</button>
-                    <button class="btn btn-default">清空代码</button>
+                    <a class="btn btn-primary">保存</a>
+                    <a class="btn btn-default">清空代码</a>
                   </div>
                   <div class="form-group">
-                    <label class="col-lg-1 control-label">题目文本：</label>
+                    <label class="col-lg-1 control-label xc-nowrap">题目文本：</label>
                     <div class="col-lg-11">
                       <input type="text" placeholder="阅读短文，判断下列句子是否符合短文内容，符合用“T”，不符合用“F”" class="form-control">
                     </div>
@@ -314,7 +314,7 @@
                       </div>
                     </div>
                     <div class="form-group">
-                      <label class="col-lg-1 control-label">答案&解析：</label>
+                      <label class="col-lg-1 control-label xc-nowrap">答案&解析：</label>
                       <div class="col-lg-2">
                         <select name="account" class="form-control m-b">
                           <option value="">请选择答案</option>
@@ -336,7 +336,7 @@
                       </div>
                     </div>
                     <div class="form-group">
-                      <label class="col-lg-1 control-label">答案&解析：</label>
+                      <label class="col-lg-1 control-label xc-nowrap">答案&解析：</label>
                       <div class="col-lg-2">
                         <select name="account" class="form-control m-b">
                           <option value="">请选择答案</option>
@@ -358,7 +358,7 @@
                       </div>
                     </div>
                     <div class="form-group">
-                      <label class="col-lg-1 control-label">答案&解析：</label>
+                      <label class="col-lg-1 control-label xc-nowrap">答案&解析：</label>
                       <div class="col-lg-2">
                         <select name="account" class="form-control m-b">
                           <option value="">请选择答案</option>
@@ -380,7 +380,7 @@
                       </div>
                     </div>
                     <div class="form-group">
-                      <label class="col-lg-1 control-label">答案&解析：</label>
+                      <label class="col-lg-1 control-label xc-nowrap">答案&解析：</label>
                       <div class="col-lg-2">
                         <select name="account" class="form-control m-b">
                           <option value="">请选择答案</option>
@@ -402,7 +402,7 @@
                       </div>
                     </div>
                     <div class="form-group">
-                      <label class="col-lg-1 control-label">答案&解析：</label>
+                      <label class="col-lg-1 control-label xc-nowrap">答案&解析：</label>
                       <div class="col-lg-2">
                         <select name="account" class="form-control m-b">
                           <option value="">请选择答案</option>
