--- a/src/html/intelligent_test_read_04.html
+++ b/src/html/intelligent_test_read_04.html
@@ -290,11 +290,11 @@
                 </div>
                 <form class="form-horizontal">
                   <div class="xc-mb10">
-                    <button class="btn btn-primary">保存</button>
-                    <button class="btn btn-default">清空代码</button>
+                    <a class="btn btn-primary">保存</a>
+                    <a class="btn btn-default">清空代码</a>
                   </div>
                   <div class="form-group">
-                    <label class="col-lg-1 control-label">题目文本：</label>
+                    <label class="col-lg-1 control-label xc-nowrap">题目文本：</label>
                     <div class="col-lg-11">
                       <input type="text" placeholder="读单词，选出划线部分发音不同的单词，用A, B, C或D表示" class="form-control">
                     </div>
@@ -325,7 +325,7 @@
                       </div>
                     </div>
                     <div class="form-group">
-                      <label class="col-lg-1 control-label">答案&解析：</label>
+                      <label class="col-lg-1 control-label xc-nowrap">答案&解析：</label>
                       <div class="col-lg-2">
                         <select name="account" class="form-control m-b">
                           <option value="">请选择答案</option>
@@ -357,7 +357,7 @@
                         </div>
                       </div>
                       <div class="form-group">
-                        <label class="col-lg-1 control-label">答案&解析：</label>
+                        <label class="col-lg-1 control-label xc-nowrap">答案&解析：</label>
                         <div class="col-lg-2">
                           <select name="account" class="form-control m-b">
                             <option value="">请选择答案</option>
