--- a/src/html/intelligent_test_read_05.html
+++ b/src/html/intelligent_test_read_05.html
@@ -290,11 +290,11 @@
                 </div>
                 <form class="form-horizontal">
                   <div class="xc-mb10">
-                    <button class="btn btn-primary">保存</button>
-                    <button class="btn btn-default">清空代码</button>
+                    <a class="btn btn-primary">保存</a>
+                    <a class="btn btn-default">清空代码</a>
                   </div>
                   <div class="form-group">
-                    <label class="col-lg-1 control-label">题目文本：</label>
+                    <label class="col-lg-1 control-label xc-nowrap">题目文本：</label>
                     <div class="col-lg-11">
                       <input type="text" placeholder="在短文的空格内填入适当的词，使其内容通顺，每空格限执一词，首字母己给" class="form-control">
                     </div>
