--- a/src/html/synchronize_unit_word_edit.html
+++ b/src/html/synchronize_unit_word_edit.html
@@ -323,11 +323,11 @@
                             </div>
                           </div>
                           <div class="form-group col-xs-6">
-                            <label class="col-lg-2 control-label">
+                            <label class="col-lg-3 control-label">
                               <a class="btn btn-default btn-small jq-add-wordMean"> + 增加词性词义</a>
                             </label>
-                            <label class="col-lg-2 control-label">
-                              <button class="btn btn-primary">保存</button>
+                            <label class="col-lg-3 control-label">
+                              <a class="btn btn-primary">保存</a>
                             </label>
                           </div>
                         </div>
@@ -419,7 +419,7 @@
                             </div>
                           </div>
                         </div>
-                        <button class="btn btn-primary">保存</button>
+                        <a class="btn btn-primary">保存</a>
                       </form>
                     </li>
                   </ul>
