--- a/src/html/27_readText_1.html
+++ b/src/html/27_readText_1.html
@@ -84,13 +84,19 @@
             <div class="pent-close"><img src="../img/readText-close.png" alt="关闭"></div>
           </div>
           <div class="pent-body">
-            <div class="readText-btns">
+              <div class="xc-proplay">
+                  <audio class="audioMp3"><source src="../music/2.mp3" type="audio/mp3"></audio>
+                  <div class="xc-proplay-btns">
+                    <img class="xc-proplay-img toogleloop" src="../img/readText-loop.png" alt="暂替">
+                    <img class="xc-proplay-img tooglePlay play" src="../img/readText-play.png" alt="播放">
+                  </div>
+                </div>
+            <!-- <div class="readText-btns">
               <div class="readText-loop"><img class='btn-img' src="../img/readText-loop.png" alt="循环播放">循环播放</div>
               <div class="readText-play"><img class='btn-img' src="../img/readText-play.png" alt="播放">播放</div>
-              <!-- 正在播放 -->
-              <!-- <div class="readText-loop"><img class='btn-img' src="../img/readText-loop-active.png" alt="循环播放">循环播放</div>
-              <div class="readText-play"><img class='btn-img' src="../img/readText-play-active.png" alt="播放">播放</div> -->
-            </div>
+              <div class="readText-loop"><img class='btn-img' src="../img/readText-loop-active.png" alt="循环播放">循环播放</div>
+              <div class="readText-play"><img class='btn-img' src="../img/readText-play-active.png" alt="播放">播放</div>
+            </div> -->
             <div class="readText-box">
               <p class="readText-item">Are you Helen?</p>
               <p class="readText-item">Yes, I am.</p>
