--- a/src/html/35_realText.html
+++ b/src/html/35_realText.html
@@ -100,18 +100,19 @@
             </div>
           </div>
           <div class="xc-proplay">
+            <audio class="audioMp3"><source src="../music/3.mp3" type="audio/mp3"></audio>
             <div class="xc-proplay-btns">
-              <img class="xc-proplay-img" src="../img/readText-play-active.png" alt="播放">
-              <!-- <img class="xc-proplay-img" src="../img/readText-play.png" alt="播放"> -->
-              <img class="xc-proplay-img" src="../img/realText-zt.png" alt="暂替">
-              <!-- <img class="xc-proplay-img" src="../img/realText-zt-active.png" alt="暂替"> -->
+              <!-- <img class="xc-proplay-img" src="../img/readText-play-active.png" alt="播放"> -->
+              <img class="xc-proplay-img tooglePlay play" src="../img/readText-play.png" alt="播放">
+              <!-- <img class="xc-proplay-img" src="../img/realText-zt.png" alt="暂替"> -->
+              <img class="xc-proplay-img tooglePause" src="../img/realText-zt-active.png" alt="暂替">
             </div>
             <div class="xc-proplay-box">
-              <span class="xc-proplay-time">11:03</span>
+              <span class="xc-proplay-time currentTime">00:00</span>
               <div class="xc-proplay-outher">
-                <div class="xc-proplay-inner" style="width: 50%"></div>
+                <div class="xc-proplay-inner" style="width: 0%"></div>
               </div>
-              <span class="xc-proplay-time">16:00</span>
+              <span class="xc-proplay-time duration">00:00</span>
             </div>
           </div>
         </div>
