--- a/src/html/03_index.html
+++ b/src/html/03_index.html
@@ -60,11 +60,15 @@
         <li>
           <a class="task" href='javascript:;'>我的任务</a>
         </li>
+        <li>
+          <a class="logout" href='javascript:;'>退出登录</a>
+        </li>
       </ul>
     </div>
   </div>
 </header>
     <!-- endbuild -->
+
 
 
 
@@ -1388,6 +1392,7 @@
     </div>
   </div>
   <!-- endbuild -->
+
 
 
 
