--- a/src/html/25_read_setence.html
+++ b/src/html/25_read_setence.html
@@ -59,11 +59,15 @@
         <li>
           <a class="task" href='javascript:;'>我的任务</a>
         </li>
+        <li>
+          <a class="logout" href='javascript:;'>退出登录</a>
+        </li>
       </ul>
     </div>
   </div>
 </header>
   <!-- endbuild -->
+
 
 
 
@@ -208,6 +212,7 @@
     </div>
   </div>
   <!-- endbuild -->
+
 
 
 
