--- a/src/html/08_change_password.html
+++ b/src/html/08_change_password.html
@@ -62,11 +62,15 @@
         <li>
           <a class="task" href='javascript:;'>我的任务</a>
         </li>
+        <li>
+          <a class="logout" href='javascript:;'>退出登录</a>
+        </li>
       </ul>
     </div>
   </div>
 </header>
   <!-- endbuild -->
+
 
 
 
@@ -152,6 +156,7 @@
     </div>
   </div>
   <!-- endbuild -->
+
 
 
 
