--- a/src/html/32_synchro_test.html
+++ b/src/html/32_synchro_test.html
@@ -57,11 +57,15 @@
         <li>
           <a class="task" href='javascript:;'>我的任务</a>
         </li>
+        <li>
+          <a class="logout" href='javascript:;'>退出登录</a>
+        </li>
       </ul>
     </div>
   </div>
 </header>
   <!-- endbuild -->
+
 
 
 
@@ -125,6 +129,7 @@
     </div>
   </div>
    <!-- endbuild -->
+
 
 
 
