--- a/src/html/part/head.html
+++ b/src/html/part/head.html
@@ -32,6 +32,9 @@
         <li>
           <a class="task" href='javascript:;'>我的任务</a>
         </li>
+        <li>
+          <a class="logout" href='javascript:;'>退出登录</a>
+        </li>
       </ul>
     </div>
   </div>
