--- a/src/html/grammar.html
+++ b/src/html/grammar.html
@@ -26,6 +26,7 @@
 
 
 
+
   <link rel="stylesheet" href="../css/main_xc.css">
 </head>
 
@@ -69,6 +70,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -244,6 +246,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -255,13 +258,13 @@
             <div class="xc-table">
               <div class="xc-table-head">
                 <ul>
-                  <li class="col-xs-2">课程阶段</li>
+                  <li class="col-xs-4">课程阶段</li>
                   <li class="col-xs-4">选择内容</li>
                   <li class="col-xs-4">单元</li>
                 </ul>
               </div>
               <div class="xc-table-body">
-                <ul class="jq-xc-table" style="height: 232px;">
+                <ul class="jq-xc-table grammar" style="height: 232px;">
                   <li class="one active">小学语法
                     <ul class="two">
                       <li class="active">一状语
@@ -418,6 +421,7 @@
 
 
 
+
   </div>
 
   <!-- build:js -->
@@ -434,6 +438,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
