--- a/src/html/intelligent_real_detail.html
+++ b/src/html/intelligent_real_detail.html
@@ -27,6 +27,7 @@
 
 
 
+
   <link rel="stylesheet" href="../css/main_xc.css">
 </head>
 
@@ -70,6 +71,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -247,11 +249,12 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
         <div class="content-heading">
-          小升初/中考/高考冲刺
+          高考冲刺
           <ol class="breadcrumb">
             <li>
               <a href="./intelligent_real.html">真题冲刺</a>
@@ -416,6 +419,7 @@
 
 
 
+
   </div>
   <div id="add" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" class="modal fade" style="display: none;">
     <div class="modal-dialog">
@@ -457,6 +461,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
