--- a/src/html/intelligent_real_detail_small.html
+++ b/src/html/intelligent_real_detail_small.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <title>数据统计</title>
+  <title>智能培优-真题冲刺</title>
   <!-- build:css -->
   <link rel="stylesheet" href="../js/vendor/fontawesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="../js/vendor/simple-line-icons/css/simple-line-icons.css">
@@ -28,10 +28,7 @@
 
 
 
-
-
-
-
+  <link rel="stylesheet" href="../css/main_xc.css">
 </head>
 
 <body>
@@ -74,11 +71,6 @@
       </nav>
     </header>
     <!-- endbuild -->
-
-
-
-
-
 
 
 
@@ -258,130 +250,153 @@
 
 
 
-
-
-
-
-
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
         <div class="content-heading">
-          即将到期学员
+          小升初/中考
+          <ol class="breadcrumb">
+            <li>
+              <a href="./intelligent_real.html">真题冲刺</a>
+            </li>
+            <li class="active">试题</li>
+          </ol>
         </div>
         <div class="row">
           <div class="col-xs-12">
-            <div class="panel-default">
-              
-            
-              <div class="panel-heading">
-                <form class="form-lineH">
-                  <div class="row">
-                    <div class="form-group col-sm-3">
-                        <label class="checkbox-inline c-checkbox">
-                          <input id="inlineCheckbox10" type="checkbox" value="option1">
-                          <span class="fa fa-check"></span>不显示体验学员</label>
-                    </div>
-                  </div>
-                </form>
-              </div>
-              <!-- START table-responsive-->
-              <div class="panel-heading">
-                <div class="table-responsive">
-                  <table class="table table-bordered table-hover dataTable">
-                    <thead>
-                      <tr>
-                        <th>学生手机</th>
-                        <th>姓名</th>
-                        <th>昵称</th>
-                        <th>所属教师</th>
-                        <th>所属班级</th>
-                        <th>有效期</th>
-                        <th>注册日期</th>
-                        <th>到期日期</th>
-                        <th>当前学币</th>
-                        <th>年级</th>
-                      </tr>
-                    </thead>
-                    <tbody id="designerlist">
-                      <tr>
-                        <td class="text-warning">18000000000</td>
-                        <td>名字名字</td>
-                        <td>昵称昵称</td>
-                        <td>教师教师</td>
-                        <td>班级班级</td>
-                        <td>5天</td>
-                        <td>2015-01-21</td>
-                        <td class="text-danger">2015-01-21</td>
-                        <td>500</td>
-                        <td>七年级</td>
-                      </tr>
-                      <tr>
-                        <td class="text-warning">18000000000</td>
-                        <td>名字名字</td>
-                        <td>昵称昵称</td>
-                        <td>教师教师</td>
-                        <td>班级班级</td>
-                        <td>5天</td>
-                        <td>2015-01-21</td>
-                        <td class="text-danger">2015-01-21</td>
-                        <td>500</td>
-                        <td>七年级</td>
-                      </tr>
-                      <tr>
-                        <td>18000000000</td>
-                        <td>名字名字</td>
-                        <td>昵称昵称</td>
-                        <td>教师教师</td>
-                        <td>班级班级</td>
-                        <td>5天</td>
-                        <td>2015-01-21</td>
-                        <td>2015-01-21</td>
-                        <td>500</td>
-                        <td>七年级</td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-
-                <!-- build:pages -->
-                <!-- 分页 -->
-                <div class="row">
-                  <div class="pagination-fa col-lg-4 col-lg-offset-8 text-right">
-                    <ul class="pagination pagination-sm m0">
-                      <li>
-                        <a href="#" aria-label="Previous">
-                          <span aria-hidden="true">«</span>
-                        </a>
-                      </li>
-                      <li>
-                        <a href="#">1</a>
-                      </li>
-                      <li>
-                        <a href="#">2</a>
-                      </li>
-                      <li class="active">
-                        <a href="#">3</a>
-                      </li>
-                      <li>
-                        <a href="#" aria-label="Next">
-                          <span aria-hidden="true">»</span>
-                        </a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>  
-                <!-- endbuild -->
-
-
-
-
-
-
-
-
-              </div>
-            </div>
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#add">新增试卷</button>
+            <table class="table table-words">
+              <thead>
+                <tr>
+                  <th class="col-xs-1">当前序号</th>
+                  <th class="col-xs-2">试卷名称</th>
+                  <th class="col-xs-5">排序值（数字越大越靠后）</th>
+                  <th class="col-xs-1">是否显示</th>
+                  <th class="col-xs-3"></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>1</td>
+                  <td>初中真题模拟卷一</td>
+                  <td>
+                    <input type="text" value="1" class="form-control">
+                  </td>
+                  <td>
+                    <label class="switch switch-lg">
+                      <input type="checkbox" checked="checked">
+                      <span></span>
+                    </label>
+                  </td>
+                  <td>
+                    <button class="btn btn-primary pull-right jq-del-sj">删除试卷</button>
+                    <a href="./intelligent_real_unit_small.html" class="btn btn-primary pull-right">修改试题</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>初中真题模拟卷一</td>
+                  <td>
+                    <input type="text" value="1" class="form-control">
+                  </td>
+                  <td>
+                    <label class="switch switch-lg">
+                      <input type="checkbox" checked="checked">
+                      <span></span>
+                    </label>
+                  </td>
+                  <td>
+                    <button class="btn btn-primary pull-right jq-del-sj">删除试卷</button>
+                    <a href="./intelligent_real_unit_small.html" class="btn btn-primary pull-right">修改试题</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>初中真题模拟卷一</td>
+                  <td>
+                    <input type="text" value="1" class="form-control">
+                  </td>
+                  <td>
+                    <label class="switch switch-lg">
+                      <input type="checkbox" checked="checked">
+                      <span></span>
+                    </label>
+                  </td>
+                  <td>
+                    <button class="btn btn-primary pull-right jq-del-sj">删除试卷</button>
+                    <a href="./intelligent_real_unit_small.html" class="btn btn-primary pull-right">修改试题</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>初中真题模拟卷一</td>
+                  <td>
+                    <input type="text" value="1" class="form-control">
+                  </td>
+                  <td>
+                    <label class="switch switch-lg">
+                      <input type="checkbox" checked="checked">
+                      <span></span>
+                    </label>
+                  </td>
+                  <td>
+                    <button class="btn btn-primary pull-right jq-del-sj">删除试卷</button>
+                    <a href="./intelligent_real_unit_small.html" class="btn btn-primary pull-right">修改试题</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>初中真题模拟卷一</td>
+                  <td>
+                    <input type="text" value="1" class="form-control">
+                  </td>
+                  <td>
+                    <label class="switch switch-lg">
+                      <input type="checkbox" checked="checked">
+                      <span></span>
+                    </label>
+                  </td>
+                  <td>
+                    <button class="btn btn-primary pull-right jq-del-sj">删除试卷</button>
+                    <a href="./intelligent_real_unit_small.html" class="btn btn-primary pull-right">修改试题</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>初中真题模拟卷一</td>
+                  <td>
+                    <input type="text" value="1" class="form-control">
+                  </td>
+                  <td>
+                    <label class="switch switch-lg">
+                      <input type="checkbox" checked="checked">
+                      <span></span>
+                    </label>
+                  </td>
+                  <td>
+                    <button class="btn btn-primary pull-right jq-del-sj">删除试卷</button>
+                    <a href="./intelligent_real_unit_small.html" class="btn btn-primary pull-right">修改试题</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>初中真题模拟卷一</td>
+                  <td>
+                    <input type="text" value="1" class="form-control">
+                  </td>
+                  <td>
+                    <label class="switch switch-lg">
+                      <input type="checkbox">
+                      <span></span>
+                    </label>
+                  </td>
+                  <td>
+                    <button class="btn btn-primary pull-right jq-del-sj">删除试卷</button>
+                    <a href="./intelligent_real_unit_small.html" class="btn btn-primary pull-right">修改试题</a>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
           </div>
         </div>
       </div>
@@ -405,13 +420,33 @@
 
 
 
-
-
-
-
-
   </div>
-
+  <div id="add" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" class="modal fade" style="display: none;">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" data-dismiss="modal" aria-label="Close" class="close">
+            <span aria-hidden="true">×</span>
+          </button>
+          <h4 id="myModalLabel" class="modal-title">添加试卷</h4>
+        </div>
+        <div class="modal-body">
+          <form class="form-horizontal">
+            <div class="form-group">
+              <label for="" class="col-lg-2 xc-nowrap">试卷标题：</label>
+              <div class="col-lg-10">
+                <input type="text" placeholder="
+                  请输入题干" class="form-control">
+              </div>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary">添加</button>
+        </div>
+      </div>
+    </div>
+  </div>
   <!-- build:js -->
   <!-- =============== JS ===============-->
   <script src="../js/vendor/modernizr/modernizr.custom.js"></script>
@@ -431,12 +466,7 @@
 
 
 
-
-
-
-
-
-
+  <script src="../js/intelligent.js"></script>
 
 
 
