--- a/src/html/intelligent_real_unit_small.html
+++ b/src/html/intelligent_real_unit_small.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <title>数据统计</title>
+  <title>智能培优-真题冲刺</title>
   <!-- build:css -->
   <link rel="stylesheet" href="../js/vendor/fontawesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="../js/vendor/simple-line-icons/css/simple-line-icons.css">
@@ -28,10 +28,7 @@
 
 
 
-
-
-
-
+  <link rel="stylesheet" href="../css/main_xc.css">
 </head>
 
 <body>
@@ -74,11 +71,6 @@
       </nav>
     </header>
     <!-- endbuild -->
-
-
-
-
-
 
 
 
@@ -258,128 +250,45 @@
 
 
 
-
-
-
-
-
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
         <div class="content-heading">
-          即将到期学员
+          中考冲刺-真题模拟题一
+          <ol class="breadcrumb">
+            <li>
+              <a href="./intelligent_real.html">真题冲刺</a>
+            </li>
+            <li>
+              <a href="./intelligent_real_detail_small.html">试卷列表</a>
+            </li>
+            <li class="active">真题模拟题一</li>
+          </ol>
         </div>
         <div class="row">
           <div class="col-xs-12">
-            <div class="panel-default">
-              
-            
-              <div class="panel-heading">
-                <form class="form-lineH">
-                  <div class="row">
-                    <div class="form-group col-sm-3">
-                        <label class="checkbox-inline c-checkbox">
-                          <input id="inlineCheckbox10" type="checkbox" value="option1">
-                          <span class="fa fa-check"></span>不显示体验学员</label>
-                    </div>
-                  </div>
-                </form>
+            <div class="xc-text-group col-xs-6 center-block">
+              <div class="xc-text-item">
+                <a href="./intelligent_real_hearing.html">听力测试
+                  <br>（未录入）
+                </a>
               </div>
-              <!-- START table-responsive-->
-              <div class="panel-heading">
-                <div class="table-responsive">
-                  <table class="table table-bordered table-hover dataTable">
-                    <thead>
-                      <tr>
-                        <th>学生手机</th>
-                        <th>姓名</th>
-                        <th>昵称</th>
-                        <th>所属教师</th>
-                        <th>所属班级</th>
-                        <th>有效期</th>
-                        <th>注册日期</th>
-                        <th>到期日期</th>
-                        <th>当前学币</th>
-                        <th>年级</th>
-                      </tr>
-                    </thead>
-                    <tbody id="designerlist">
-                      <tr>
-                        <td class="text-warning">18000000000</td>
-                        <td>名字名字</td>
-                        <td>昵称昵称</td>
-                        <td>教师教师</td>
-                        <td>班级班级</td>
-                        <td>5天</td>
-                        <td>2015-01-21</td>
-                        <td class="text-danger">2015-01-21</td>
-                        <td>500</td>
-                        <td>七年级</td>
-                      </tr>
-                      <tr>
-                        <td class="text-warning">18000000000</td>
-                        <td>名字名字</td>
-                        <td>昵称昵称</td>
-                        <td>教师教师</td>
-                        <td>班级班级</td>
-                        <td>5天</td>
-                        <td>2015-01-21</td>
-                        <td class="text-danger">2015-01-21</td>
-                        <td>500</td>
-                        <td>七年级</td>
-                      </tr>
-                      <tr>
-                        <td>18000000000</td>
-                        <td>名字名字</td>
-                        <td>昵称昵称</td>
-                        <td>教师教师</td>
-                        <td>班级班级</td>
-                        <td>5天</td>
-                        <td>2015-01-21</td>
-                        <td>2015-01-21</td>
-                        <td>500</td>
-                        <td>七年级</td>
-                      </tr>
-                    </tbody>
-                  </table>
+              <div class="xc-text-item">
+                <a href="./intelligent_real_words_01.html">词汇与语法
+                  <br>
+                  <span class="error">(未完成)</span>
+                </a>
+              </div>
+              <div class="xc-text-item">
+                  <a href="./intelligent_real_read_c01.html">阅读理解
+                    <br>（未录入）
+                  </a>
                 </div>
-
-                <!-- build:pages -->
-                <!-- 分页 -->
-                <div class="row">
-                  <div class="pagination-fa col-lg-4 col-lg-offset-8 text-right">
-                    <ul class="pagination pagination-sm m0">
-                      <li>
-                        <a href="#" aria-label="Previous">
-                          <span aria-hidden="true">«</span>
-                        </a>
-                      </li>
-                      <li>
-                        <a href="#">1</a>
-                      </li>
-                      <li>
-                        <a href="#">2</a>
-                      </li>
-                      <li class="active">
-                        <a href="#">3</a>
-                      </li>
-                      <li>
-                        <a href="#" aria-label="Next">
-                          <span aria-hidden="true">»</span>
-                        </a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>  
-                <!-- endbuild -->
-
-
-
-
-
-
-
-
+              <div class="xc-text-item">
+                <a href="./intelligent_real_write.html">写作
+                  <br>
+                  <span class="error">(未完成)</span>
+                </a>
               </div>
             </div>
           </div>
@@ -393,11 +302,6 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
-
-
-
-
-
 
 
 
@@ -426,11 +330,6 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
-
-
-
-
-
 
 
 
