--- a/src/html/synchronize_unit_sentence_edit.html
+++ b/src/html/synchronize_unit_sentence_edit.html
@@ -24,6 +24,7 @@
 
 
 
+
   <link rel="stylesheet" href="../css/main_xc.css">
   <link rel="stylesheet" href="../js/vendor/blueimp-file-upload/css/jquery.fileupload.css">
 
@@ -70,6 +71,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -245,6 +247,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -359,7 +362,7 @@
                                   <span class="btn btn-default fileinput-button">
                                     <i class="fa fa-fw fa-upload"></i>
                                     <span>上传文件</span>
-                                    <input type="file" class="file-ipt" name="files[]">
+                                    <input type="file" class="file-ipt" name="files[]" multiple>
                                   </span>
                                   <p class="audio-type">支持扩展名：mp3</p>
                                 </div>
@@ -489,6 +492,7 @@
 
 
 
+
   </div>
 
   <!-- build:js -->
@@ -505,6 +509,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
